# twemoji-rs-compile-fix

./: Cargo.toml  README.md  build.rs
src/: lib.rs
