[package]
name = "twemoji-rs"
version = "0.1.0"
edition = "2021"
description = "A word-cloud image generation crate."
license = "Unlicense"
repository = "https://github.com/Inspirateur/wordcloud-rs"
keywords = ["twemoji", "emoji", "twitter", "icon", "unicode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
lazy_static = "*"